Issue #14120: add module-info.java to make Checkstyle an explicit Java module